spade-tests/src/snapshots/spade_tests__ast_lowering__impl_trait_types_typecheck_correctly_inside_impl_blocks.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait T {
    fn a(self) -> bool;
    fn b(self) -> bool;
}

impl T for uint<8> {
    fn a(self) -> bool { true }
    fn b(self) -> bool { false }
}

impl bool {
    fn f(self, t: impl T) -> bool {
        t.a() && t.b()
    }
}

fn test() {
    let _ = true.f(());
}


error: Argument type mismatch. Expected T got ()
   ┌─ testinput:18:20
   │
12 │     fn f(self, t: impl T) -> bool {
   │                        - Required because of the trait bound specified here
   ·
18 │     let _ = true.f(());
   │                    ^^ () does not implement T
