spade-tests/src/snapshots/spade_tests__ast_lowering__include_macro_with_non_string_token.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test() -> bool {
    include!(3)
}


error: Incorrect token passed to `include!`
  ┌─ testinput:2:5
  │
2 │     include!(3)
  │     ^^^^^^^^
  │
  = note: A single string literal containing the path to include must be passed
