spade-tests/src/snapshots/spade_tests__ast_lowering__inst_function_used.snap
---
source: spade-tests/src/ast_lowering.rs
---
mod a {
    pub fn foo() -> bool { true }
}

use a::foo;

entity test() -> bool {
    inst foo()
}


error: Unexpected `inst` for function call
  ┌─ testinput:8:5
  │
2 │     pub fn foo() -> bool { true }
  │         -- foo is defined as a function here
  ·
8 │     inst foo()
  │     ^^^^ --- Because foo is a function
  │     │     
  │     Unexpected `inst`
  │
  = Consider removing the `inst`
  │
8 │     inst foo()
  │     ----
